--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <h1 class="titre">App component</h1>
-<app-residences></app-residences>
+<a routerLink="/residences">Residences</a>
+<a routerLink="/users">Users</a>
+<router-outlet></router-outlet>
