--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <h1 class="titre">App component</h1>
-<a routerLink="/residences">Residences</a>
+<a routerLink="/residences">Home</a>
+<a routerLink="/addResidence">Add Residence</a>
+<a routerLink="/addApartment">Add Apartment</a>
+
 <a routerLink="/users">Users</a>
 <router-outlet></router-outlet>
