--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -6,10 +6,6 @@
         <th>Password</th>
     </tr>
     <tr *ngFor="let u of listUsers">
-        <td>{{u.id}}</td>
-        <td>{{u.username}}</td>
-        <td>{{u.email}}</td>
-        <td>{{u.password}}</td>
-        <td><button (click)="deleteUser(u)">Delete</button></td>
+        <app-user [user]="u" (e)="deleteUser($event)"></app-user>
     </tr>
 </table>
